# wasm-plugin-poc

./: .gitignore  Cargo.toml  README.md  build.sh  serve.sh
app/: index.html
plugin/: Cargo.toml
plugin/src/: lib.rs
plugin1/: Cargo.toml
webapp/: Cargo.toml
webapp/src/: lib.rs
webserver/: Cargo.toml
webserver/src/: main.rs
