[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.11"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.5"

wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
serde = { version = "=1.0.118", features = ["derive"] }

js-sys = "0.3.45"
web-sys = { version = "0.3.4", features = ['Window'] }

